raffia/tests/error/selectors/invalid-attr-2.snap
---
source: raffia/tests/error.rs
---
error: attribute selector matcher is expected
  ┌─ invalid-attr-2.css:1:6
  │
1 │ [href#="test"] {}
  │      ^


